@startuml CD
skinparam classAttributeIconSize 0
top to bottom direction

class ManColStatisticsUI {

}

class ManagerCollaboratorStatisticsController {
        + getFreelancers()
        + setFreelancers(Set<Freelancer> selected)
        + getMeanDelays()
        + getMeanPayments()
        + getStandardDeviationDelays()
        + getStandardDeviationPayments()
        + getHistogramDataDelays(Double bucketSize)
        + getHistogramDataPayments(Double bucketSize)
        + getNumberTransactions()
}


class App {
        + getRegistOrganization()
}

class RegistOrganization {
        + getOrganization (org)
}

class Organization {
        - String name
        - String NIF
        + getListTransaction()
}

class Collaborator {
        - String name
        - String email
        - String password
}

class Manager {
        - String name
        - String email
        - String password
}

class ListTransaction {
        + getFreelancersOfAllTransactions()
        + getTransactionsOfFreelancers(Set<Freelancer> selected)
        + get(ID)
}

class Transaction {
        + madeToAny(Set<Freelancer> selected)
        + getTaskExecutionDetails()
        + getAmount()
}


class Task {
        - String id
        - String description
        - Integer durationInHours
        - Double costPerHourOfJuniorEur
        - String category
}

class TaskExecutionDetails {
        - LocalDate endDate
        - Integer delayInDays
        - String DescriptionQualityOfWork
}

class Freelancer {
        - String id
        - String name
        - String levelOfExpertise
        - String email
        - String NIF
        - String bankAccountIBAN
        - String address
        - String country
}

class PaymentDetails {
        Boolean isPaid
}

ManColStatisticsUI ..> ManagerCollaboratorStatisticsController
ManagerCollaboratorStatisticsController ..> App
ManagerCollaboratorStatisticsController ..> ListTransaction
ManagerCollaboratorStatisticsController ..> RegistOrganization
ManagerCollaboratorStatisticsController ..> Transaction

App                          "1" --> "1"      RegistOrganization        : has
RegistOrganization           "1" --> "*"      Organization              : has
Organization                 "1" -- "1,..."   Collaborator              : has >
Organization                 "1" -- "1"       Manager                   : has >
Organization                 "1" --> "1"      ListTask                  : has
Organization                 "1" --> "1"      ListTransaction           : has
ListTransaction              "1" --> "*"      Transaction               : has
Transaction                  "1" --> "1"      Task                      : knows
Transaction                  "*" --> "1"      Freelancer                : knows
Transaction                  "*" --> "1"      Organization              : knows
Transaction                  "1" --> "1"      TaskExecutionDetails      : has
Transaction                  "1" --> "1"      PaymentDetails            : has
TaskExecutionDetails         "1" --> "1"      Task                      : knows
ListTask                     "1" --> "*"      Task                      : has
Task                         "*" --> "0, 1"   Freelancer                : knows


@enduml